k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-backend
  labels:
    app: stage-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stage-backend
  template:
    metadata:
      labels:
        app: stage-backend
    spec:
      hostAliases:
        - ip: "172.21.0.1"
          hostnames:
            - "keycloak"

      containers:
        - name: stage-backend
          image: stage-backend:local-fixed
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: stage-backend-service
spec:
  selector:
    app: stage-backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 80
  type: ClusterIP
