k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-mysql
  labels:
    app: stage-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-mysql
  template:
    metadata:
      labels:
        app: stage-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stage-mysql-service
spec:
  selector:
    app: stage-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
